Revert "fix z-index (#31093)"
This reverts commit 2f534a1b649727954cdf56994749a5807eab6958.

--- a/assets/styles/components/_tab-toggle.scss
+++ b/assets/styles/components/_tab-toggle.scss
@@ -413,7 +413,7 @@ $tab-active-shadow: 0 -4px 12px rgba(99, 44, 166, 0.08);
   position: relative;
   border-bottom: none;
   background: #fff;
-  z-index: 1;
+  z-index: 2;
 }
 
 .code-tabs .nav-tabs::after,
